--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <link rel="canonical" href="https://lobanov-fitness.ru/" />
     
     <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
